- Fixed test project makefiles.  - Removed tinyFont global; Debug class now creates its own instance.  - TinyFont follows class pattern used by Jeff's PackedFonts.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -85,7 +85,7 @@
 						>
 					</File>
 					<File
-						RelativePath=".\libwoopsi\src\tinyfont.c"
+						RelativePath=".\libwoopsi\src\tinyfont.cpp"
 						>
 					</File>
 				</Filter>
@@ -671,7 +671,7 @@
 						>
 					</File>
 					<File
-						RelativePath=".\libwoopsi\include\sysfont.h"
+						RelativePath=".\libwoopsi\include\tinyfont.h"
 						>
 					</File>
 				</Filter>
