--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -84,10 +84,6 @@
 						RelativePath=".\libwoopsi\src\packedfontbase.cpp"
 						>
 					</File>
-					<File
-						RelativePath=".\libwoopsi\src\tinyfont.cpp"
-						>
-					</File>
 				</Filter>
 				<Filter
 					Name="Strings"
@@ -602,6 +598,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\libwoopsi\src\fonts\tinyfont.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\libwoopsi\src\fonts\trebuchet8.cpp"
 					>
 				</File>
@@ -668,10 +668,6 @@
 					</File>
 					<File
 						RelativePath=".\libwoopsi\include\packedfontbase.h"
-						>
-					</File>
-					<File
-						RelativePath=".\libwoopsi\include\tinyfont.h"
 						>
 					</File>
 				</Filter>
@@ -1249,6 +1245,10 @@
 				</File>
 				<File
 					RelativePath=".\libwoopsi\include\fonts\timesnewroman9.h"
+					>
+				</File>
+				<File
+					RelativePath=".\libwoopsi\include\fonts\tinyfont.h"
 					>
 				</File>
 				<File
