- BitmapWrapper::getData(x, y) no longer causes a compiler warning.  - Removed PAGfx binary from demo.  - Removed zombie.c file from demo and replaced with bmp2bitmap-generated class.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -1314,6 +1314,10 @@
 				RelativePath=".\demo\src\pong.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\demo\src\zombie.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Demo Header Files"
@@ -1352,6 +1356,10 @@
 			</File>
 			<File
 				RelativePath=".\demo\include\pong.h"
+				>
+			</File>
+			<File
+				RelativePath=".\demo\include\zombie.h"
 				>
 			</File>
 		</Filter>
