- Added new GadgetEventHandlerList class and moved event raising code into it from the Gadget class.  - Duplicate gadget event handlers cannot be added to a gadget.  - Added build and deploy batch files for libwoopsi.  - Tests all build against libwoopsi instead of the raw Woopsi source.  - Most examples build against libwoopsi instead of the raw Woopsi source.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -161,6 +161,14 @@
 						>
 					</File>
 				</Filter>
+				<Filter
+					Name="Events"
+					>
+					<File
+						RelativePath=".\libwoopsi\src\gadgeteventhandlerlist.cpp"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="Gadgets"
@@ -740,6 +748,10 @@
 					</File>
 					<File
 						RelativePath=".\libwoopsi\include\gadgeteventhandler.h"
+						>
+					</File>
+					<File
+						RelativePath=".\libwoopsi\include\gadgeteventhandlerlist.h"
 						>
 					</File>
 				</Filter>
