- Switched various string methods from using u32 to s32 types.  - Added TextBoxBase interface to ensure that all TextBox-style classes implement the same methods.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -1030,6 +1030,10 @@
 						RelativePath=".\libwoopsi\include\textbox.h"
 						>
 					</File>
+					<File
+						RelativePath=".\libwoopsi\include\textboxbase.h"
+						>
+					</File>
 				</Filter>
 				<Filter
 					Name="RadioButton"
