- Added SliderBase interface to ensure that all Slider-style classes implement the same methods.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -1051,6 +1051,10 @@
 					Name="Slider"
 					>
 					<File
+						RelativePath=".\libwoopsi\include\sliderbase.h"
+						>
+					</File>
+					<File
 						RelativePath=".\libwoopsi\include\sliderhorizontal.h"
 						>
 					</File>
