- Added ListBoxBase interface to ensure that all ListBox-style classes implement the same methods.

--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -1091,6 +1091,10 @@
 						>
 					</File>
 					<File
+						RelativePath=".\libwoopsi\include\listboxbase.h"
+						>
+					</File>
+					<File
 						RelativePath=".\libwoopsi\include\listboxdataitem.h"
 						>
 					</File>
