--- a/Woopsi/Woopsi.vcproj
+++ b/Woopsi/Woopsi.vcproj
@@ -58,6 +58,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\libwoopsi\src\range.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\libwoopsi\src\woopsifuncs.cpp"
 					>
 				</File>
@@ -665,6 +669,10 @@
 				</File>
 				<File
 					RelativePath=".\libwoopsi\include\dmafuncs.h"
+					>
+				</File>
+				<File
+					RelativePath=".\libwoopsi\include\range.h"
 					>
 				</File>
 				<File
